--- a/TelldusCoreWrapper/TelldusCoreWrapper.csproj
+++ b/TelldusCoreWrapper/TelldusCoreWrapper.csproj
@@ -10,7 +10,14 @@
     <PackageProjectUrl>https://github.com/trembon/TelldusCoreWrapper</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/trembon/TelldusCoreWrapper/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/trembon/TelldusCoreWrapper</RepositoryUrl>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageTags>tellstick, telldus, telldus-core, tellstick-duo</PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>A wrapper for the TelldusCore service written in C#.
+This wrapper allowes the creator to speak with devices that supports the 433MHz communication standard for smart homes.
+This wrapper requires the TelldusCore service to be installed and a connected controller like the Tellstick Duo.</Description>
+    <RepositoryType>trembon and contributors</RepositoryType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
